force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/VDO_Amperage__c.field-meta.xml
<CustomField>
    <fullName>VDO_Amperage__c</fullName>
    <label>Amperage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>