force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/VDO_Voltage__c.field-meta.xml
<CustomField>
    <fullName>VDO_Voltage__c</fullName>
    <label>Voltage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>