force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/VDO_Voltage_Indicator__c.field-meta.xml
<CustomField>
    <fullName>VDO_Voltage_Indicator__c</fullName>
    <formula>IF ((VDO_Voltage__c &lt; 750 &amp;&amp; TEXT(VDO_Voltage_UOM__c) = &apos;V&apos;),&apos;Small&apos;&amp;&apos; &apos; &amp; TEXT(VDO_Voltage__c) &amp; &apos; &apos; &amp; TEXT(VDO_Voltage_UOM__c),
IF(((VDO_Voltage__c &gt; 750 &amp;&amp; TEXT(VDO_Voltage_UOM__c) = &apos;V&apos;) &amp;&amp; (VDO_Voltage__c &lt; 44 &amp;&amp; TEXT(VDO_Voltage_UOM__c ) = &apos;kV&apos;)),
&apos;Medium&apos;&amp;&apos; &apos; &amp; TEXT(VDO_Voltage__c) &amp; &apos; &apos; &amp; TEXT(VDO_Voltage_UOM__c), &apos;High&apos;&amp;&apos; &apos; &amp; TEXT(VDO_Voltage__c) &amp; &apos; &apos; &amp; TEXT(VDO_Voltage_UOM__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voltage Indicator</label>
    <type>Text</type>
</CustomField>