force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/VDO_Voltage_UOM__c.field-meta.xml
<CustomField>
    <fullName>VDO_Voltage_UOM__c</fullName>
    <label>Voltage UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>kV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>