force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ActivationDate__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>