force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__AverageMonthlyUsage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AverageMonthlyUsage__c</fullName>
    <description>Average monthly usage for the service point</description>
    <label>Average Monthly Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>