force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__FieldServiceClass__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FieldServiceClass__c</fullName>
    <description>Classification of field activity.</description>
    <label>Field Service Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class A</fullName>
            </value>
            <value>
                <fullName>Class B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>