force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__InstallationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__InstallationType__c</fullName>
    <description>Type of meter installation</description>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>