force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__IsPremisesInfoOverridden__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsPremisesInfoOverridden__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates the details on the premises are overridden by the details on the service point.</description>
    <label>Override Premises Information</label>
    <type>Checkbox</type>
</CustomField>