force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__LoadProfile__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LoadProfile__c</fullName>
    <label>Load Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential Low</fullName>
            </value>
            <value>
                <fullName>Residential Med</fullName>
            </value>
            <value>
                <fullName>Residential High</fullName>
            </value>
            <value>
                <fullName>SMB Low</fullName>
            </value>
            <value>
                <fullName>SMB Med</fullName>
            </value>
            <value>
                <fullName>SMB High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>