force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__MarketIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MarketIdentifier__c</fullName>
    <description>Market Identifier value from external system.</description>
    <externalId>true</externalId>
    <label>Market Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>