force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__MeterNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MeterNumber__c</fullName>
    <description>Meter number from the backend system.</description>
    <externalId>true</externalId>
    <label>Meter Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>