force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__MeterReadHold__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MeterReadHold__c</fullName>
    <description>Temporarily prevent meter reading for this service point</description>
    <label>Meter Read Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>