force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__MeterReadInstructions__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MeterReadInstructions__c</fullName>
    <description>Provides additional meter read instructions required to access difficult meters.</description>
    <label>Meter Read Instructions</label>
    <length>32786</length>
    <type>LongTextArea</type>
</CustomField>