force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__MeterReadWarning__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MeterReadWarning__c</fullName>
    <description>Provides warnings to the meter reader.</description>
    <label>Meter Read Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>