force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__MeterType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MeterType__c</fullName>
    <description>Type of meter installed at the Service Point.</description>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smart Meter</fullName>
            </value>
            <value>
                <fullName>Prepay Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>