force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__OperationArea__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OperationArea__c</fullName>
    <description>Groups service point within a field service operation territory/area.</description>
    <label>Operation Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>