force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__ServicePointNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServicePointNumber__c</fullName>
    <externalId>true</externalId>
    <label>Service Point Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>