force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__TemperatureArea__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TemperatureArea__c</fullName>
    <description>Grouping of service points within a region with similar air temperatures</description>
    <label>Temperature Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>