force-app/main/default/objects/vlocity_cmt__ServicePoint__c/fields/vlocity_cmt__VoltageLevel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VoltageLevel__c</fullName>
    <description>Level of voltage supplied to a service point through the installed electric meter</description>
    <label>Voltage Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>